[package]
name = "src-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
topper-core = { path = "../../topper-core" }
topper-aetolia = { path = "../../topper-aetolia" }
topper-derive = { path = "../../topper-derive" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1"
lazy_static = "1.4.0"
wasm-bindgen = "0.2"