[package]
name = "share-log-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
topper-aetolia = { path = "../../../../../topper-aetolia" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
# There is currently a bug in wasm-bindgen 0.2.104 that breaks builds in certain
# environments, so we pin to the previous version for now.
wasm-bindgen = "=0.2.103"
serde-wasm-bindgen = "0.6"